[tool.poetry]
name = "wireviz-web"
version = "0.3.2"
description = "A wrapper around WireViz for bringing it to the web. Easily document cables and wiring harnesses."
authors = [
    "Jürgen Key <jkey@arcor.de>",
    "Andreas Motl <andreas.motl@panodata.org>"
]
license = "AGPLv3"
readme = "README.rst"
include = [
    "LICENSE",
    "CHANGES.rst"
]
homepage = "https://community.hiveeyes.org/t/bringing-wireviz-to-the-web/3700"
repository = "https://github.com/daq-tools/wireviz-web"

keywords = [
    "cable",
    "connector",
    "connector-editor",
    "hardware",
    "harness",
    "wiring",
    "wiring-diagram",
    "wiring-harness"
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]

[tool.poetry.urls]
"Issues" = "https://github.com/daq-tools/wireviz-web/issues"

[tool.poetry.dependencies]
python = "^3.7"
wireviz = "^0.3"
flask = "<2.2"
flask-restx = "^0.5"
werkzeug = "<2.2"

# Conditionally installed for backward compatibility with older Python versions
importlib_metadata              = { version = "^3.3.0", python = "<3.8" }
click = "^8"

[tool.poetry.dev-dependencies]
poethepoet = "<1"
black = "^22"
isort = "^5"
pytest = "^7"
pytest-flask = "^1"
filetype = "^1"
pytest-cov = "^3"
covdefaults = "^2"

[tool.poetry.scripts]
wireviz-web = "wireviz_web.cli:run"


[tool.poe.tasks]
test = { shell="pytest tests -vvv", help="Run tests" }
coverage = { shell="pytest --cov=wireviz_web tests -vvv", help="Run coverage" }
release = { script="release:start", help="Cut a release and publish it" }

[tool.poe.tasks.format]
sequence = [
    { cmd = "black ." },
    { cmd = "isort ." },
]
help = "Format code with `black` and `isort`"


[tool.coverage.run]
# plugins = ["covdefaults"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
