[tool.poetry]
name = "wireviz-web"
version = "0.4.2"
description = "A wrapper around WireViz for bringing it to the web. Easily document cables and wiring harnesses."
authors = [
    "Jürgen Key <jkey@arcor.de>",
    "Andreas Motl <andreas.motl@panodata.org>"
]
license = "AGPLv3"
readme = "README.rst"
include = [
    "LICENSE",
    "CHANGES.rst"
]
homepage = "https://community.hiveeyes.org/t/bringing-wireviz-to-the-web/3700"
repository = "https://github.com/daq-tools/wireviz-web"

keywords = [
    "cable",
    "connector",
    "connector-editor",
    "hardware",
    "harness",
    "wiring",
    "wiring-diagram",
    "wiring-harness"
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]

[tool.poetry.urls]
"Issues" = "https://github.com/daq-tools/wireviz-web/issues"

[tool.poetry.dependencies]
python = ">=3.8"
wireviz = "==0.4.1"
flask = "<2.3"
flask-restx = "<1.4"
werkzeug = "<4"
pillow = ">=9,<12"

# Conditionally installed for backward compatibility with older Python versions
importlib_metadata              = { version = ">=3.3,<7", python = "<3.8" }
click = "<9"
Flask-Cors = "<6"

[tool.poetry.dev-dependencies]
poethepoet = "<1"
black = "<25"
isort = "<6"
pytest = "<8"
pytest-flask = "<2"
filetype = "<2"
pytest-cov = "<5"
covdefaults = "<3"

[tool.poetry.scripts]
wireviz-web = "wireviz_web.cli:run"


[tool.poe.tasks]
test = { shell="pytest", help="Run tests" }
coverage = { shell="pytest --cov=wireviz_web", help="Run coverage" }
release = { script="release:start", help="Cut a release and publish it" }

[tool.poe.tasks.format]
sequence = [
    { cmd = "black ." },
    { cmd = "isort ." },
]
help = "Format code with `black` and `isort`"


[tool.pytest.ini_options]
minversion = "2.0"
addopts = "-rsfEX -p pytester --strict-markers --verbosity=3"
log_level = "DEBUG"
testpaths = ["tests"]
xfail_strict = true
markers = [
]

[tool.coverage.run]
# plugins = ["covdefaults"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
