[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42", # At least v42 of setuptools required.
  "versioningit",
]

[project]
name = "wireviz-web"
version = "0.4.2"
description = "A wrapper around WireViz for bringing it to the web. Easily document cables and wiring harnesses."
authors = [
    { name = "Jürgen Key", email = "jkey@arcor.de" },
    { name = "Andreas Motl", email = "andreas.motl@panodata.org" },
]
requires-python = ">=3.8"
readme = "README.rst"
license = "AGPL-3.0"
keywords = [
    "cable",
    "connector",
    "connector-editor",
    "hardware",
    "harness",
    "wiring",
    "wiring-diagram",
    "wiring-harness",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = [
    "wireviz==0.4.1",
    "flask<3.2",
    "flask-restx<1.4",
    "werkzeug<4",
    "pillow>=9,<12",
    "importlib_metadata>=3.3,<7 ; python_version < '3.8'",
    "click<9",
    "Flask-Cors<6",
]

[tool.setuptools.packages.find]
include = ["wireviz_web"]

[project.urls]
Homepage = "https://community.hiveeyes.org/t/bringing-wireviz-to-the-web/3700"
Repository = "https://github.com/daq-tools/wireviz-web"
Issues = "https://github.com/daq-tools/wireviz-web/issues"

[project.scripts]
wireviz-web = "wireviz_web.cli:run"

[dependency-groups]
dev = [
    "poethepoet<1",
    "black<25",
    "isort<6",
    "pytest<9",
    "pytest-flask<2",
    "filetype<2",
    "pytest-cov<6",
    "covdefaults<3",
]

[tool.pytest.ini_options]
minversion = "2.0"
addopts = "-rsfEX -p pytester --strict-markers --verbosity=3"
log_level = "DEBUG"
testpaths = ["tests"]
xfail_strict = true
markers = [
]

[tool.coverage.run]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3


[tool.poe.tasks]
test = { shell="pytest", help="Run tests" }
coverage = { shell="pytest --cov=wireviz_web", help="Run coverage" }
release = { script="release:start", help="Cut a release and publish it" }

[tool.poe.tasks.format]
sequence = [
    { cmd = "black ." },
    { cmd = "isort ." },
]
help = "Format code with `black` and `isort`"

